2006-02-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/operators.R (graph.intersection, "%s%") : added
	("%u%", "%du%") : "%u%" renamed to "%du%"
	* interfaces/R/src/rinterface.c (R_igraph_intersection) : added
	(R_igraph_union) : updated

2006-02-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/operators.R (igraph.union, "%u%") : added
	* interfaces/R/src/rinterface.c (R_igraph_union) : added

2006-02-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph.ncol) : updated
	* interfaces/R/src/rinterface.c (R_igraph_read_graph_ncol) : updated

2006-02-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.merge) : added
	* interfaces/R/src/rinterface.c (R_igraph_layout_merge_dla) : added

2006-02-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/topology.R (graph.isocreate) : added
	* interfaces/R/igraph/R/motifs.R (graph.motifs.est) : added
	* interfaces/R/src/rinterface.c (R_igraph_motifs_randesu_estimate)
	(R_igraph_isoclass_create) : added

2006-02-10  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R
	(get.all.shortest.paths) : added
	* interfaces/R/src/rinterface.c (R_igraph_get_all_shortest_paths) :
	added

2006-02-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c	(R_igraph_motifs_randesu) : added
	* interfaces/R/igraph/R/motifs.R (graph.motifs) : added

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_growing_traits_game) :
	renamed to R_igraph_callaway_traits_game
	(R_igraph_establishment_game) : added
	* interfaces/R/igraph/R/games.R (callaway.traits.game) : updated
	(establishment.game) : added

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/other.R (igraph.sample) : correct bug

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (callaway.traits.game) : added